--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Michal Machovic
-email: michal.machovic@gmail.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Awesome blog about webdevelopment which will save our world from aliens!
+ 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://michalmachovic.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: machobreakbeat
